--- a/index.html
+++ b/index.html
@@ -20,42 +20,38 @@
     </nav>
     <!-- Populares -->
     <div class="container__populares-section">
-        <h2 class="title-populares">Populares</h2>
+        <h2 class="title title-populares">Populares</h2>
         <hr class="rounded">
         <div class="container-fluid card-list d-flex flex-column flex-md-row justify-content-md-center align-content-md-center p-0">
             <div class="card card-item card-background">
-                <img class="card-img-top " src="https://media.rawg.io/media/games/2e1/2e10f56f6fb99a791c19999ff3d34e7a.jpg" alt="Imagen Proyecto Doggo">
+                <img class="card-img" src="" alt="">
                 <div class="card-gradient "></div>
                 <div class="card-img-overlay d-flex align-items-start flex-column ">
                     <h2 class="card-title titulo mt-auto ">Nombre del Juego</h2>
-                    <p class="card-text ">Detalles</p>
                     <a href="" class="btn btn-primary stretched-link"></a>
                 </div>
             </div>
             <div class="card card-item card-background">
-                <img class="card-img-top " src="https://media.rawg.io/media/games/2e1/2e10f56f6fb99a791c19999ff3d34e7a.jpg" alt="Imagen Proyecto Doggo">
+                <img class="card-img" src="" alt="">
                 <div class="card-gradient "></div>
                 <div class="card-img-overlay d-flex align-items-start flex-column ">
                     <h2 class="card-title titulo mt-auto ">Nombre del Juego</h2>
-                    <p class="card-text ">Detalles</p>
                     <a href="" class="btn btn-primary stretched-link"></a>
                 </div>
             </div>
             <div class="card card-item card-background">
-                <img class="card-img-top " src="https://media.rawg.io/media/games/2e1/2e10f56f6fb99a791c19999ff3d34e7a.jpg" alt="Imagen Proyecto Doggo">
+                <img class="card-img" src="" alt="">
                 <div class="card-gradient "></div>
                 <div class="card-img-overlay d-flex align-items-start flex-column ">
                     <h2 class="card-title titulo mt-auto ">Nombre del Juego</h2>
-                    <p class="card-text ">Detalles</p>
                     <a href="" class="btn btn-primary stretched-link"></a>
                 </div>
             </div>
             <div class="card card-item card-background">
-                <img class="card-img-top " src="https://media.rawg.io/media/games/2e1/2e10f56f6fb99a791c19999ff3d34e7a.jpg" alt="Imagen Proyecto Doggo">
+                <img class="card-img" src="" alt="">
                 <div class="card-gradient "></div>
                 <div class="card-img-overlay d-flex align-items-start flex-column ">
                     <h2 class="card-title titulo mt-auto ">Nombre del Juego</h2>
-                    <p class="card-text ">Detalles</p>
                     <a href="" class="btn btn-primary stretched-link"></a>
                 </div>
             </div>
@@ -64,10 +60,51 @@
     <!-- Tabs Buscar/Recomendar  -->
     <div class="container__tabs-section">
         <div class="container__select-tab">
-            <button class="button_select-tab" id="button__search" onclick="showTabContent(0)">BUSCAR</button>
-            <button class="button_select-tab" id="button__recommend" onclick="showTabContent(1)">RECOMENDACIÓN</button>
+            <button class="button_select-tab" id="button__recommend" onclick="showTabContent(0)">RECOMENDACIÓN</button>
+            <button class="button_select-tab" id="button__search" onclick="showTabContent(1)">BUSCAR</button>
         </div>
         <hr class="rounded">
+
+        <!-- Tab Recomendacion -->
+        <div class="tab-content" id="tab__recommend">
+
+            <h4>Busca dos juegos para recibir recomendaciones similares</h4>
+
+            <div class="container__input-search">
+                <input class="input-search" id="input-search--game1" type="search" placeholder="Juego 1">
+                <input class="input-search" id="input-search--game2" type="search" placeholder="Juego 2">
+            </div>
+
+            <div class="container-fluid card-list d-flex flex-column flex-md-row justify-content-md-center align-content-md-center p-0" id="card-list-results">
+                <div class="card card-item card-item-results card-background">
+                    <img class="card-img" id="card-img-results-0" src="" alt="">
+                    <div class="card-gradient "></div>
+                    <div class="card-img-overlay d-flex align-items-start flex-column ">
+                        <h2 class="card-title titulo mt-auto" id="card-title-results-0">Juego 1</h2>
+                        <a href="" class="btn btn-primary stretched-link"></a>
+                    </div>
+                </div>
+                <div class="card card-item card-item-results card-background">
+                    <img class="card-img" id="card-img-results-1" src="" alt="">
+                    <div class="card-gradient "></div>
+                    <div class="card-img-overlay d-flex align-items-start flex-column ">
+                        <h2 class="card-title titulo mt-auto" id="card-title-results-1">Juego 2</h2>
+                        <a href="" class="btn btn-primary stretched-link"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container__button-search">
+                <button class="button__search" id="button__search--recommend">Buscar</button>
+            </div>
+
+            <hr class="rounded">
+            
+            <div class="container__results--recommend">
+                <h2 class="title" id="title-recomendados">Resultados</h2>
+            </div>
+        </div>
+
         <!-- Tab Buscar -->
         <div class="tab-content" id="tab__search">
 
@@ -110,25 +147,10 @@
             </div>
 
         </div>
-
-        <!-- Tab Recomendacion -->
-        <div class="tab-content" id="tab__recommend">
-
-            <h4>Selecciona dos juegos de la lista para recibir recomendaciones similares</h4>
-
-            <div class="container__input-search">
-                <input class="input-search" type="search">
-                <input class="input-search" type="search">
-            </div>
-
-            <div class="container__button-search">
-                <button class="button__search">Buscar</button>
-            </div>
-        </div>
     </div>
 
     <script src="js/index.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/recommend.js"></script>
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
