add find matchs tags in games

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <!-- Tabs Buscar/Recomendar  -->
     <div class="container__tabs-section">
         <div class="container__select-tab">
-            <button class="button_select-tab" id="button__recommend" onclick="showTabContent(0)">RECOMENDACIÓN</button>
-            <button class="button_select-tab" id="button__search" onclick="showTabContent(1)">BUSCAR</button>
+            <button class="button_select-tab" id="button__recommend">RECOMENDACIÓN</button>
+            <button class="button_select-tab" id="button__search">BUSCAR</button>
         </div>
         <hr class="rounded">
 
@@ -99,8 +99,8 @@
             </div>
 
             <hr class="rounded">
-            
-            <div class="container__results--recommend">
+
+            <div id="container__results--recommend">
                 <h2 class="title" id="title-recomendados">Resultados</h2>
             </div>
         </div>
