--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script defer src="js/recommend.js"></script>
+    <script defer src="js/index.js"></script>
     <title>Buscador/Recomendador de juegos</title>
+
 </head>
 
 <body>
@@ -17,10 +21,10 @@
         <a class="navbar-brand" href="#button__search">
             <img src="images/game-controller.svg" width="30" height="30" class="d-inline-block align-top" alt=""> BUSCADOR/RECOMENDADOR
         </a>
-        <a class="navbar-brand"id="navbar-saved-games" href="#">
+        <a class="navbar-brand" id="navbar-saved-games" href="#">
             <img src="images/save-icon.png" width="30" height="30" class="d-inline-block align-top" alt="">Guardados</a>
     </nav>
-    <div id="savedGamesModal">
+    <div id="savedGamesModal" style="display:none">
     </div>
     <!-- Populares -->
     <div class="container__populares-section">
@@ -65,7 +69,6 @@
     <div class="container__tabs-section">
         <div class="container__select-tab">
             <button class="button_select-tab" id="button__recommend">RECOMENDACIÓN</button>
-            <button class="button_select-tab" id="button__search">BUSCAR</button>
         </div>
         <hr class="rounded">
 
@@ -97,20 +100,6 @@
                     </div>
                 </div>
             </div>
-
-            <div class="container__button-search">
-                <button class="button__search" id="button__search--recommend">Buscar</button>
-            </div>
-
-            <hr class="rounded">
-
-            <div id="container__results--match">
-                <h2 class="title" id="title-recomendados">Resultados</h2>
-            </div>
-        </div>
-
-        <!-- Tab Buscar -->
-        <div class="tab-content" id="tab__search">
 
             <div class="container__platforms">
                 <h4>Plataforma</h4>
@@ -147,14 +136,18 @@
             </div>
 
             <div class="container__button-search">
-                <button class="button__search">Buscar</button>
+                <button class="button__search" id="button__search--recommend">Buscar</button>
             </div>
 
+            <hr class="rounded">
+
+            <div id="container__results--match">
+                <h2 class="title" id="title-recomendados">Resultados</h2>
+            </div>
         </div>
+
     </div>
 
-    <script src="js/index.js"></script>
-    <script src="js/recommend.js"></script>
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
