--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
 
             <div class="container-fluid card-list d-flex flex-column flex-md-row justify-content-md-center align-content-md-center p-0" id="card-list-results">
-                <div class="card card-item card-item-results card-background">
+                <div class="card card-item card-item-results card-background" id="card-item-0" style="display: none;">
                     <img class="card-img" id="card-img-results-0" src="" alt="">
                     <div class="card-gradient "></div>
                     <div class="card-img-overlay d-flex align-items-start flex-column ">
@@ -91,7 +91,7 @@
                         <a href="" class="btn btn-primary stretched-link"></a>
                     </div>
                 </div>
-                <div class="card card-item card-item-results card-background">
+                <div class="card card-item card-item-results card-background" id="card-item-1" style="display: none;">
                     <img class="card-img" id="card-img-results-1" src="" alt="">
                     <div class="card-gradient "></div>
                     <div class="card-img-overlay d-flex align-items-start flex-column ">
