--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <!-- Bootstrap CSS -->
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script defer src="js/recommend.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="  crossorigin="anonymous"></script>    <script defer src="js/recommend.js"></script>
     <script defer src="js/index.js"></script>
     <title>Buscador/Recomendador de juegos</title>
 
@@ -24,7 +23,7 @@
         <a class="navbar-brand" id="navbar-saved-games" href="#">
             <img src="images/save-icon.png" width="30" height="30" class="d-inline-block align-top" alt="">Guardados</a>
     </nav>
-    <div id="savedGamesModal" style="display:none">
+    <div id="savedGamesModal" >
     </div>
     <!-- Populares -->
     <div class="container__populares-section">
@@ -34,7 +33,7 @@
             <div class="card card-item card-background">
                 <img class="card-img" src="" alt="">
                 <div class="card-gradient "></div>
-                <div class="card-img-overlay d-flex align-items-start flex-column ">
+                <div class="card-img-overlay d-flex align-items-start flex-column">
                     <h2 class="card-title titulo mt-auto ">Nombre del Juego</h2>
                     <a href="" class="btn btn-primary stretched-link"></a>
                 </div>
@@ -65,14 +64,13 @@
             </div>
         </div>
     </div>
-    <!-- Tabs Buscar/Recomendar  -->
+    <!--Recomendar  -->
     <div class="container__tabs-section">
         <div class="container__select-tab">
             <button class="button_select-tab" id="button__recommend">RECOMENDACIÓN</button>
         </div>
         <hr class="rounded">
 
-        <!-- Tab Recomendacion -->
         <div class="tab-content" id="tab__recommend">
 
             <h4>Busca dos juegos para recibir recomendaciones</h4>
@@ -103,6 +101,7 @@
 
             <div class="container__platforms">
                 <h4>Plataforma</h4>
+                <button class="button__platform button__platform--active">Todas</button>
                 <button class="button__platform">PC</button>
                 <button class="button__platform">PS5</button>
                 <button class="button__platform">PS4</button>
@@ -110,8 +109,8 @@
                 <button class="button__platform">XBOX One</button>
                 <button class="button__platform">Nintendo Switch</button>
             </div>
-
-            <div class="container__genres">
+            <!-- no implementado -->
+            <!-- <div class="container__genres">
                 <h4>Generos</h4>
                 <button class="button__genres">Action</button>
                 <button class="button__genres">Indie</button>
@@ -133,7 +132,7 @@
                 <h4>Año</h4>
                 <input type="range" min="1970" max="2020" value="2020" class="slider" id="range">
                 <p>Valor: <span id="slider-text"></span></p>
-            </div>
+            </div> -->
 
             <div class="container__button-search">
                 <button class="button__search" id="button__search--recommend">Buscar</button>
@@ -149,7 +148,7 @@
     </div>
 
     <!-- Bootstrap Scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 
