--- a/index.html
+++ b/index.html
@@ -4,152 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,300;0,700;1,400&family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="  crossorigin="anonymous"></script>    <script defer src="js/recommend.js"></script>
-    <script defer src="js/index.js"></script>
-    <title>Buscador/Recomendador de juegos</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script defer type="module" src="main.js"></script>
+    <title>GameRec - Recomendador de juegos</title>
 
 </head>
 
 <body>
     <!-- NavBar -->
-    <nav class="navbar navbar-dark" style="background-color: #0a0a0a;">
-        <a class="navbar-brand" href="#button__search">
-            <img src="images/game-controller.svg" width="30" height="30" class="d-inline-block align-top" alt=""> BUSCADOR/RECOMENDADOR
-        </a>
-        <a class="navbar-brand" id="navbar-saved-games" href="#">
-            <img src="images/save-icon.png" width="30" height="30" class="d-inline-block align-top" alt="">Guardados</a>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top" style="background-color: #0a0a0a00;">
+        <a class="navbar-brand" id="navbar-title" href="#/">GAMEREC</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link navbar-item active" id="navbar-home" href="#/">Populares</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navbar-item" id="navbar-recommend" href="#/recommendations">Recomendados</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link navbar-item" id="navbar-saved-games" href="javascript:void(0)">Favoritos</a>
+                </li>
+            </ul>
+        </div>
     </nav>
-    <div id="savedGamesModal" >
-    </div>
-    <!-- Populares -->
-    <div class="container__populares-section">
-        <h2 class="title title-populares">Populares</h2>
-        <hr class="rounded">
-        <div class="container-fluid card-list d-flex flex-column flex-md-row justify-content-md-center align-content-md-center p-0">
-            <div class="card card-item card-background">
-                <img class="card-img" src="" alt="">
-                <div class="card-gradient "></div>
-                <div class="card-img-overlay d-flex align-items-start flex-column">
-                    <h2 class="card-title titulo mt-auto ">Nombre del Juego</h2>
-                    <a href="" class="btn btn-primary stretched-link"></a>
-                </div>
-            </div>
-            <div class="card card-item card-background">
-                <img class="card-img" src="" alt="">
-                <div class="card-gradient "></div>
-                <div class="card-img-overlay d-flex align-items-start flex-column ">
-                    <h2 class="card-title titulo mt-auto ">Nombre del Juego</h2>
-                    <a href="" class="btn btn-primary stretched-link"></a>
-                </div>
-            </div>
-            <div class="card card-item card-background">
-                <img class="card-img" src="" alt="">
-                <div class="card-gradient "></div>
-                <div class="card-img-overlay d-flex align-items-start flex-column ">
-                    <h2 class="card-title titulo mt-auto ">Nombre del Juego</h2>
-                    <a href="" class="btn btn-primary stretched-link"></a>
-                </div>
-            </div>
-            <div class="card card-item card-background">
-                <img class="card-img" src="" alt="">
-                <div class="card-gradient "></div>
-                <div class="card-img-overlay d-flex align-items-start flex-column ">
-                    <h2 class="card-title titulo mt-auto ">Nombre del Juego</h2>
-                    <a href="" class="btn btn-primary stretched-link"></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--Recomendar  -->
-    <div class="container__tabs-section">
-        <div class="container__select-tab">
-            <button class="button_select-tab" id="button__recommend">RECOMENDACIÓN</button>
-        </div>
-        <hr class="rounded">
+    <!-- Main -->
+    <section id="root">
 
-        <div class="tab-content" id="tab__recommend">
+    </section>
 
-            <h4>Busca dos juegos para recibir recomendaciones</h4>
-
-            <div class="container__input-search">
-                <input class="input-search" id="input-search--game1" type="search" placeholder="Juego 1">
-                <input class="input-search" id="input-search--game2" type="search" placeholder="Juego 2">
-            </div>
-
-            <div class="container-fluid card-list d-flex flex-column flex-md-row justify-content-md-center align-content-md-center p-0" id="card-list-results">
-                <div class="card card-item card-item-results card-background" id="card-item-0" style="display: none;">
-                    <img class="card-img" id="card-img-results-0" src="" alt="">
-                    <div class="card-gradient "></div>
-                    <div class="card-img-overlay d-flex align-items-start flex-column ">
-                        <h2 class="card-title titulo mt-auto" id="card-title-results-0">Juego 1</h2>
-                        <a href="" class="btn btn-primary stretched-link"></a>
-                    </div>
-                </div>
-                <div class="card card-item card-item-results card-background" id="card-item-1" style="display: none;">
-                    <img class="card-img" id="card-img-results-1" src="" alt="">
-                    <div class="card-gradient "></div>
-                    <div class="card-img-overlay d-flex align-items-start flex-column ">
-                        <h2 class="card-title titulo mt-auto" id="card-title-results-1">Juego 2</h2>
-                        <a href="" class="btn btn-primary stretched-link"></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container__platforms">
-                <h4>Plataforma</h4>
-                <button class="button__platform button__platform--active">Todas</button>
-                <button class="button__platform">PC</button>
-                <button class="button__platform">PS5</button>
-                <button class="button__platform">PS4</button>
-                <button class="button__platform">XBOX S/X</button>
-                <button class="button__platform">XBOX One</button>
-                <button class="button__platform">Nintendo Switch</button>
-            </div>
-            <!-- no implementado -->
-            <!-- <div class="container__genres">
-                <h4>Generos</h4>
-                <button class="button__genres">Action</button>
-                <button class="button__genres">Indie</button>
-                <button class="button__genres">Adventure</button>
-                <button class="button__genres">RPG</button>
-                <button class="button__genres">Strategy</button>
-                <button class="button__genres">Shooter</button>
-                <button class="button__genres">Casual</button>
-                <button class="button__genres">Simulation</button>
-                <button class="button__genres">Puzzle</button>
-                <button class="button__genres">Arcade</button>
-                <button class="button__genres">Racing</button>
-                <button class="button__genres">Sports</button>
-                <button class="button__genres">Fighting</button>
-                <button class="button__genres">Card</button>
-            </div>
-
-            <div class="container__slider">
-                <h4>Año</h4>
-                <input type="range" min="1970" max="2020" value="2020" class="slider" id="range">
-                <p>Valor: <span id="slider-text"></span></p>
-            </div> -->
-
-            <div class="container__button-search">
-                <button class="button__search" id="button__search--recommend">Buscar</button>
-            </div>
-
-            <hr class="rounded">
-
-            <div id="container__results--match">
-                <h2 class="title" id="title-recomendados">Resultados</h2>
-            </div>
-        </div>
-
-    </div>
-
-    <!-- Bootstrap Scripts -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 
 </html>
